--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 
     <li><code>f_layout = FloatLayout()</code>: Membuat objek <code>FloatLayout</code> sebagai layout utama aplikasi.</li>
 
+    <li><code>class MyApp(App): def build(self):</code>: Membuat kelas aplikasi bernama <code>MyApp</code> yang merupakan turunan dari <code>App</code>. Di dalamnya terdapat metode <code>build()</code> yang berfungsi untuk menentukan dan mengembalikan tampilan utama aplikasi.</li>
+
     <li><code>f_layout.add_widget(btn1)</code>: Menambahkan tombol <code>btn1</code> ke dalam layout agar tampil di aplikasi.</li>
 
     <li><code>return f_layout</code>: Mengembalikan layout sebagai tampilan utama aplikasi saat dijalankan.</li>
@@ -77,11 +79,12 @@
     <li><code>MyApp().run()</code>: Menjalankan aplikasi Kivy yang telah dibuat.</li>
   </ul>
 
-  <!-- Link GitHub disimpan tapi tidak ditampilkan -->
+  <!-- Link GitHub tetap ada tapi tidak tampil -->
   <a href="https://github.com/usernamekamu/namarepo" class="hidden">GitHub Repo</a>
 
 </body>
 </html>
+
 
 
 
