--- a/index.html
+++ b/index.html
@@ -2,89 +2,132 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Penjelasan Program Kivy - Tombol di Tengah</title>
+  <title>Penjelasan Program Kivy - Tampilan Tombol</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fdfdfd;
       color: #333;
-      padding: 30px;
-      line-height: 1.6;
+      padding: 40px;
+      line-height: 1.7;
     }
 
     h1 {
-      color: #006699;
+      color: #2b6777;
       margin-bottom: 10px;
     }
 
     h2 {
-      color: #444;
-      margin-top: 30px;
+      color: #333;
+      margin-top: 40px;
+    }
+
+    pre {
+      background-color: #f0f0f0;
+      padding: 20px;
+      border-left: 5px solid #2b6777;
+      border-radius: 10px;
+      overflow-x: auto;
+      white-space: pre-wrap;
+      font-family: Consolas, monospace;
+      margin-top: 20px;
     }
 
     ul {
-      background: #fff;
+      background: #ffffff;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      box-shadow: 0 0 8px rgba(0,0,0,0.08);
+      margin-top: 20px;
     }
 
     li {
-      margin-bottom: 12px;
+      margin-bottom: 15px;
     }
 
     code {
-      background-color: #eee;
-      padding: 2px 5px;
-      border-radius: 4px;
+      background-color: #eeeeee;
+      padding: 2px 6px;
+      border-radius: 5px;
+      font-family: monospace;
     }
 
-    /* Link GitHub disembunyikan */
-    a.hidden {
-      display: none;
+    img {
+      max-width: 100%;
+      margin-top: 20px;
+      border-radius: 10px;
+      border: 2px solid #ccc;
+    }
+
+    .note {
+      background-color: #e8f6f3;
+      border-left: 4px solid #2b6777;
+      padding: 15px;
+      border-radius: 8px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
 
   <h1>Penjelasan Program Python Kivy</h1>
-  <p><strong>Tujuan Program:</strong> Menampilkan tombol di tengah layar menggunakan <em>GUI Framework</em> <strong>Kivy</strong>, dengan pengaturan warna latar belakang dan layout yang fleksibel.</p>
+  <p class="note"><strong>Tujuan:</strong> Program ini menampilkan sebuah tombol di tengah layar menggunakan <strong>GUI Framework Kivy</strong>, dengan pengaturan warna latar belakang dan posisi tombol yang fleksibel.</p>
 
-  <h2>Penjelasan Baris per Baris Kode:</h2>
+  <h2>Kode Program:</h2>
+  <pre>
+from kivy.app import App
+from kivy.uix.button import Button
+from kivy.uix.floatlayout import FloatLayout
+from kivy.core.window import Window
+from kivy.utils import get_color_from_hex
+
+class MyApp(App):
+    def build(self):
+        f_layout = FloatLayout()
+
+        Window.clearcolor = get_color_from_hex('#eeeeee')
+
+        btn1 = Button(
+            text='btn1',
+            size_hint=(0.2, 0.2),
+            pos_hint={'x': 0.4, 'y': 0.4}
+        )
+
+        btn1.background_color = get_color_from_hex('#aaaaaa')
+
+        f_layout.add_widget(btn1)
+        return f_layout
+
+MyApp().run()
+  </pre>
+
+  <h2>Hasil Tampilan Program:</h2>
+  <p>Berikut adalah tampilan aplikasi saat dijalankan:</p>
+  <img src="screenshot.png" alt="Tampilan Hasil Program Kivy">
+
+  <h2>Penjelasan Baris per Baris:</h2>
   <ul>
     <li><code>from kivy.app import App</code>: Mengimpor kelas dasar <code>App</code> yang digunakan untuk membuat dan menjalankan aplikasi Kivy.</li>
-
     <li><code>from kivy.uix.button import Button</code>: Mengimpor komponen <code>Button</code> untuk membuat tombol dalam aplikasi.</li>
-
-    <li><code>from kivy.uix.floatlayout import FloatLayout</code>: Mengimpor <code>FloatLayout</code>, yaitu layout fleksibel yang memungkinkan penempatan widget secara bebas menggunakan <code>pos_hint</code>.</li>
-
-    <li><code>from kivy.core.window import Window</code>: Mengimpor objek <code>Window</code> untuk mengatur tampilan jendela aplikasi seperti warna latar belakang.</li>
-
-    <li><code>from kivy.utils import get_color_from_hex</code>: Mengimpor fungsi untuk mengubah kode warna <code>hex</code> (misalnya <code>#eeeeee</code>) menjadi format warna Kivy (RGBA).</li>
-
+    <li><code>from kivy.uix.floatlayout import FloatLayout</code>: Mengimpor <code>FloatLayout</code>, yaitu layout fleksibel yang memungkinkan penempatan elemen secara bebas menggunakan posisi relatif.</li>
+    <li><code>from kivy.core.window import Window</code>: Mengimpor <code>Window</code> untuk mengatur tampilan jendela aplikasi, termasuk warna latar belakang.</li>
+    <li><code>from kivy.utils import get_color_from_hex</code>: Mengimpor fungsi untuk mengonversi kode warna heksadesimal (hex) ke format warna Kivy (RGBA).</li>
+    <li><code>class MyApp(App):</code>: Membuat kelas aplikasi bernama <code>MyApp</code> yang merupakan turunan dari <code>App</code>.</li>
+    <li><code>def build(self):</code>: Metode yang dipanggil saat aplikasi dijalankan. Fungsi ini menentukan tampilan utama dari aplikasi.</li>
+    <li><code>f_layout = FloatLayout()</code>: Membuat layout utama bertipe <code>FloatLayout</code> untuk menempatkan widget secara fleksibel.</li>
     <li><code>Window.clearcolor = get_color_from_hex('#eeeeee')</code>: Mengatur warna latar belakang jendela aplikasi menjadi abu-abu muda.</li>
-
-    <li><code>btn1 = Button(text='btn1', size_hint=(0.2, 0.2), pos_hint={'x': 0.4, 'y': 0.4})</code>: Membuat tombol dengan teks "btn1", ukuran 20% dari layar, dan diletakkan di tengah menggunakan <code>pos_hint</code>.</li>
-
-    <li><code>btn1.background_color = get_color_from_hex('#aaaaaa')</code>: Mengubah warna latar belakang tombol menjadi abu-abu gelap.</li>
-
-    <li><code>f_layout = FloatLayout()</code>: Membuat objek <code>FloatLayout</code> sebagai layout utama aplikasi.</li>
-
-    <li><code>class MyApp(App): def build(self):</code>: Membuat kelas aplikasi bernama <code>MyApp</code> yang merupakan turunan dari <code>App</code>. Di dalamnya terdapat metode <code>build()</code> yang berfungsi untuk menentukan dan mengembalikan tampilan utama aplikasi.</li>
-
-    <li><code>f_layout.add_widget(btn1)</code>: Menambahkan tombol <code>btn1</code> ke dalam layout agar tampil di aplikasi.</li>
-
-    <li><code>return f_layout</code>: Mengembalikan layout sebagai tampilan utama aplikasi saat dijalankan.</li>
-
-    <li><code>MyApp().run()</code>: Menjalankan aplikasi Kivy yang telah dibuat.</li>
+    <li><code>btn1 = Button</code>: Membuat tombol baru dengan konfigurasi berikut:
+      <ul>
+        <li><code>text='btn1'</code>: Menampilkan teks "btn1" di tombol.</li>
+        <li><code>size_hint=(0.2, 0.2)</code>: Ukuran tombol adalah 20% dari lebar dan tinggi layar.</li>
+        <li><code>pos_hint={'x': 0.4, 'y': 0.4}</code>: Posisi tombol 40% dari kiri dan 40% dari bawah, sehingga tampak di tengah layar.</li>
+      </ul>
+    </li>
+    <li><code>btn1.background_color = get_color_from_hex('#aaaaaa')</code>: Memberi warna latar belakang abu-abu gelap pada tombol.</li>
+    <li><code>f_layout.add_widget(btn1)</code>: Menambahkan tombol ke dalam layout agar muncul di aplikasi.</li>
+    <li><code>return f_layout</code>: Mengembalikan layout untuk ditampilkan sebagai tampilan utama aplikasi.</li>
+    <li><code>MyApp().run()</code>: Menjalankan aplikasi Kivy.</li>
   </ul>
-
-  <!-- Link GitHub tetap ada tapi tidak tampil -->
-  <a href="https://github.com/usernamekamu/namarepo" class="hidden">GitHub Repo</a>
 
 </body>
 </html>
-
-
-
-
