--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -125,5 +125,16 @@ MyApp().run()
     <li><code>MyApp().run()</code>: Menjalankan aplikasi Kivy.</li>
   </ul>
 
+</body>
+</html>
+ -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Program Kivy - PMOBILE</title>
+</head>
+<body>
+  <h1>Program GUI dengan Kivy</h1>
+  <p>Ini adalah hasil program sederhana menggunakan library Kivy di Python.</p>
 </body>
 </html>
