--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <title>Program GUI Kivy</title>
+</head>
+<body>
+  <h1>Dokumentasi Program Kivy</h1>
+  <p>Program ini dibuat menggunakan framework Kivy.</p>
+  <p>Menampilkan tombol tengah dengan warna latar yang dapat diatur.</p>
+</body>
+</html> -->
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
   <title>Penjelasan Program Kivy - Tampilan Tombol</title>
   <style>
     body {
@@ -127,14 +146,4 @@ MyApp().run()
 
 </body>
 </html>
- -->
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Program Kivy - PMOBILE</title>
-</head>
-<body>
-  <h1>Program GUI dengan Kivy</h1>
-  <p>Ini adalah hasil program sederhana menggunakan library Kivy di Python.</p>
-</body>
-</html>
+
